test/compilable/needsmods.d
// ARG_SETS: -i
// PERMUTE_ARGS:
// LINK:
import imports.foofunc2;
void main()
{
    foo2();
}
